# Triton

./: .appveyor.yml  .build_number  .clang-format  .clang-tidy  .codecov.yml  .editorconfig  .gdb_history  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  INSTALL  INSTRUCTIONS TO COMPILE IN 32 bits  LICENSE.txt  LICENSE_BSD.txt  README.md  README.rst  WindowsBuild.txt  appveyor.yml  build.txt  clean.sh  codecov.yml  compile.sh  core  fix-dependencies.patch  hash_to_input.py  input_to_hash.py  lgtm.yml  makefile  out  peda-session-crackme_xor.txt  semantics_issues  setup.py  triton  tritonAttach  vcpkg.json
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  WindowsBuild.txt  extract_doc.py  footer.html  header.html
doc/autocomplete/: .gitignore  example.py  function.py  generate_autocomplete.py  import_test.py
doc/snippets/: pyAstContext.py  pyAstNode.py  pyBitVector.py  pyImmediate.py  pyInstruction.py  pyMemoryAccess.py  pyPathConstraint.py  pyRegister.py  pySolverModel.py  pySymbolicExpression.py  pySymbolicVariable.py
src/: CMakeLists.txt  main.cpp
src/analysis/: formatStringBug.cpp
src/analysisProcessor/: analysisProcessor.cpp
src/bindings/python/: callbacks.cpp  init.cpp  initCallbackEnv.cpp  initCpuSizeEnv.cpp  initFlagEnv.cpp  initLinux64Env.cpp  initOpcodeCategoryEnv.cpp  initOpcodeEnv.cpp  initOperandEnv.cpp  initRegEnv.cpp  initSmt2LibEnv.cpp  initSyscallEnv.cpp  initVersionEnv.cpp  processingPyConf.cpp  pythonUtils.cpp  smt2libCallbacks.cpp  tritonCallbacks.cpp  tritonPyObject.cpp  xPyFunc.cpp
src/components/: BasicBlock.cpp  ExtractBits.cpp  ImmediateOperand.cpp  Inst.cpp  Instruction.cpp  MemoryOperand.cpp  RegisterOperand.cpp  Stats.cpp  TmpReg.cpp  Trace.cpp  Tritinst.cpp  TritonOperand.cpp
src/contextHandler/: PINContextHandler.cpp  PINConverter.cpp
src/core/: core.cpp  display.cpp  image.cpp  instructions.cpp  main.cpp  signals.cpp  symbolicElement.cpp  utils.cpp
src/core/analysisProcessor/: analysisProcessor.cpp
src/core/components/: BitsVector.cpp  ImmediateOperand.cpp  Inst.cpp  MemoryOperand.cpp  RegisterOperand.cpp  Stats.cpp  TmpReg.cpp  Trace.cpp  Trigger.cpp  TritonOperand.cpp
src/core/contextHandler/: PINContextHandler.cpp  PINConverter.cpp
src/engines/snapshot/: snapshotEngine.cpp
src/engines/solver/: smodel.cpp  solverEngine.cpp
src/engines/symbolic/: symbolicEngine.cpp  symbolicExpression.cpp  symbolicVariable.cpp
src/engines/taint/: taintEngine.cpp
src/examples/cmake/: CMakeLists.txt  myproject.cpp
src/examples/cpp/: CMakeLists.txt  Makefile  block.cpp  constraint.cpp  ctest_api.cpp  customSolver.cpp  hooking_libc.cpp  info_reg.cpp  ir.cpp  myCustomSolver.cpp  myCustomSolver.h  parsing_elf.cpp  parsing_pe.cpp  shld_test.cpp  simplification.cpp  taint_and_tag.cpp  taint_reg.cpp
src/examples/pin/: ast_dictionaries.py  ast_summaries.py  blacklist.py  callback.py  callback_concrete_needs.py  callback_image.py  callback_routine.py  callback_signals.py  callback_syscall.py  count_inst.py  coverage.py  crackme_hash_collision.py  inject_model_with_snapshot.py  (+11 more)
src/includes/: .dse.h.swp  AdcIRBuilder.h  AddIRBuilder.h  AnalysisProcessor.h  AndIRBuilder.h  AndnpdIRBuilder.h  AndnpsIRBuilder.h  AndpdIRBuilder.h  AndpsIRBuilder.h  BaseIRBuilder.h  BasicBlock.h  BitsVector.h  BswapIRBuilder.h  CallIRBuilder.h  CallbackDefine.h  CbwIRBuilder.h  CdqeIRBuilder.h  ClcIRBuilder.h  CldIRBuilder.h  CmcIRBuilder.h  CmovbIRBuilder.h  CmovbeIRBuilder.h  CmovlIRBuilder.h  CmovleIRBuilder.h  CmovnbIRBuilder.h  CmovnbeIRBuilder.h  CmovnlIRBuilder.h  CmovnleIRBuilder.h  CmovnoIRBuilder.h  CmovnpIRBuilder.h  CmovnsIRBuilder.h  CmovnzIRBuilder.h  CmovoIRBuilder.h  CmovpIRBuilder.h  CmovsIRBuilder.h  CmovzIRBuilder.h  CmpIRBuilder.h  CmpxchgIRBuilder.h  Colors.h  ContextHandler.h  (+147 more)
src/ir/: .add.cpp.swp  IRBuilderFactory.cpp  add.cpp  branchs.cpp  cmp.cpp  mov.cpp  notImplemented.cpp  pop.cpp  push.cpp
src/libtriton/: CMakeLists.txt  Config.cmake.in
src/libtritonast/: CMakeLists.txt  context.cpp  nodes.cpp
src/scripts/: extract_syscall.py  gen_oracle_table.py  libTriton_units_testing.py.in  replace_UINT_PIN.py  run_linux_test.sh  setup.py.in  triton.in  tritonAttach.in
src/smt2lib/: smt2lib.cpp  utils.cpp  z3AST.cpp  z3Result.cpp
src/snapshotEngine/: memoryWrite.cpp  snapshotEngine.cpp
src/solverEngine/: smodel.cpp  smt2lib.cpp  smt2lib_utils.cpp  solverEngine  solverEngine.cpp  utils.cpp
src/stubs/: Makefile  gen_symbols_vector.py  triton-stubs.c
src/symbolicEngine/: symbolicElement.cpp  symbolicEngine.cpp  symbolicExpression.cpp  symbolicVariable.cpp
src/taintEngine/: taintEngine.cpp
src/testers/: CMakeLists.txt  check_eval.py  check_semantics.py  libTriton_units_testing.py  qemu-test-x86_64.py  test_ast_eval.py  test_examples.py  test_flags.py  test_immediate.py  test_instruction.py  test_memory.py  test_registers.py  test_simulation.py  test_symbolic.py  test_taint.py  unicorn_test_aarch64.py  unicorn_test_arm32.py  unicorn_test_arm32_all.sh  unicorn_test_arm32_branch_arm_1.py  unicorn_test_arm32_branch_arm_2.py  unicorn_test_arm32_branch_pc_arm_1.py  unicorn_test_arm32_branch_pc_arm_2.py  unicorn_test_arm32_branch_thumb_1.py  unicorn_test_arm32_branch_thumb_2.py  unicorn_test_arm32_branches.py  unicorn_test_arm32_branches_pc.py  unicorn_test_arm32_branches_thumb.py  unicorn_test_arm32_data_arm.py  unicorn_test_arm32_data_thumb.py  unicorn_test_arm32_interworking.py  unicorn_test_arm32_interworking_arm.py  unicorn_test_arm32_interworking_thumb.py  unicorn_test_arm32_loadstore_arm.py  unicorn_test_arm32_loadstore_arm_1.py  unicorn_test_arm32_loadstore_arm_2.py  unicorn_test_arm32_loadstore_arm_3.py  unicorn_test_arm32_loadstore_thumb_1.py  unicorn_test_arm32_loadstore_thumb_2.py  unicorn_test_arm32_loadstore_thumb_3.py  unicorn_test_arm32_thumb.py  (+2 more)
src/tools/: code_coverage.py  format_string_bug_analysis.py  memory_tracer.py  use_after_free_bug_and_memory_leak_analysis.py
src/tracer/: CMakeLists.txt
src/trigger/: trigger.cpp
src/utils/: pinUtils.cpp  syscallNumberToString.cpp
(+997 files in other folders)
